--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "yarn dev",
+    "start": "cross-env NODE_ENV=production node index.js",
     "dev": "node server.js",
     "test": "jest --coverage",
     "test:watch": "yarn test -- --watch",
@@ -56,11 +56,13 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
     "highlight.js": "^9.18.1",
     "marked": "^0.8.0",
     "normalize.css": "^8.0.1",
-    "preact": "^8.2.5",
-    "preact-compat": "^3.17.0",
+    "preact": "^10.3.3",
+    "preact-compat": "^3.19.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
